commit fix overflow-x secara otomatis

--- a/src/input.css
+++ b/src/input.css
@@ -5,6 +5,7 @@
 @layer base {
   body {
     @apply font-opensan;
+    overflow-x: hidden;
   }
 }
 
@@ -55,7 +56,7 @@
   }
 }
 
-.cursor {
+/* .cursor {
   display: block;
   width: 30px;
   height: 30px;
@@ -76,7 +77,7 @@
   background: transparent;
   animation: moveCursor2 0.5s forwards;
   border: 3px solid #64748b;
-}
+} 
 
 @keyframes moveCursor1 {
   from {
@@ -101,7 +102,7 @@
     transform: scale(1);
     opacity: 0;
   }
-}
+}*/
 
 .svgblob {
   position: relative;
@@ -168,6 +169,7 @@
   }
 }
 
+/* Bloob Animated 2 */
 .blob {
   position: absolute;
   width: 500px;
@@ -213,8 +215,43 @@
   }
 }
 
+/* Media Query untuk layar sedang */
+@media (max-width: 1024px) {
+  .blob {
+    width: 350px;
+    height: 350px;
+  }
+
+  .blob:hover {
+    width: 390px;
+    height: 390px;
+  }
+
+  @-webkit-keyframes move {
+    from {
+      transform: translate(0, -10px) rotate(-90deg);
+      border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+    }
+    to {
+      transform: translate(0, 400px) rotate(-10deg);
+      border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+    }
+  }
+
+  @keyframes move {
+    from {
+      transform: translate(0, -10px) rotate(-90deg);
+      border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
+    }
+    to {
+      transform: translate(0, 400px) rotate(-10deg);
+      border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
+    }
+  }
+}
+
 /* Media Query untuk layar kecil */
-@media (max-width: 768px) {
+@media (max-width: 640px) {
   .blob {
     width: 200px;
     height: 200px;
@@ -231,7 +268,7 @@
       border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
     }
     to {
-      transform: translate(0, 600px) rotate(-10deg);
+      transform: translate(0, 550px) rotate(-10deg);
       border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
     }
   }
@@ -242,10 +279,15 @@
       border-radius: 24% 76% 35% 65% / 27% 36% 64% 73%;
     }
     to {
-      transform: translate(0, 600px) rotate(-10deg);
+      transform: translate(0, 550px) rotate(-10deg);
       border-radius: 76% 24% 33% 67% / 68% 55% 45% 32%;
     }
   }
+}
+
+.blob-container {
+  overflow: hidden;
+  position: relative;
 }
 
 .square {
